[package]
name = "crawl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = "0.8.0-rc0"
glam = { version = "0.20", features = ["mint"] }
# Has to be the same version of mint that our math lib uses here.
mint = "0.5"